fix: fix z-index Communities, config postCSS

--- a/src/components/CommunityAutomation/CommunityAutomation.module.css
+++ b/src/components/CommunityAutomation/CommunityAutomation.module.css
@@ -88,6 +88,7 @@
     position: relative;
     grid-row: span 2;
     align-self: start;
+    z-index: -1;
 }
 
 .image-block{
